# Synth

./: .gitignore  CMakeLists.txt  ROADMAP.md  main.c
.github/WORKFLOWS/: build.yml
.github/workflows/: build.yml
cmake/: CompilerFlags.cmake
include/: exception.h  synth.h  synthlib.h  types.h
src/: CMakeLists.txt  synth.c  synth.cpp  synth.h  synthlib.cpp  types.h  typing.h
